<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.simplemovies.experimental.ExperimentalViewModel" />
    </data>


    <ScrollView
        android:id="@+id/scrollview_experimental"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_experimental_fragmentcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearlayout_experimental_advcontainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:id="@+id/linearlayout_experimental_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner_experimental_states"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipgroup_experimental_genres"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false">

                    </com.google.android.material.chip.ChipGroup>


                    <TextView
                        android:id="@+id/textview_experimental_filtertext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/experimental_filter" />

                    <View style="@style/divider" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintlayout_experimental_panelcontainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/textview_experimental_typetext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/experimental_type"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textview_experimental_scoretext"
                            app:layout_constraintVertical_bias="0.0" />

                        <Spinner
                            android:id="@+id/spinner_experimental_type"
                            style="@style/spinner_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/spinner_experimental_userscore"
                            app:layout_constraintTop_toBottomOf="@+id/spinner_experimental_userscore"
                            app:layout_constraintVertical_bias="0.0" />

                        <Spinner
                            android:id="@+id/spinner_experimental_userscore"
                            style="@style/spinner_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/textview_experimental_scoretext"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textview_experimental_scoretext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/experimental_score"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/button_experimental_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:text="@string/search_button_search"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/spinner_experimental_type" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearlayout_retry_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_experimental_retry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fragment_experimental_button_retry"
                        android:visibility="gone" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_experimental_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:listData="@{viewmodel.discover.results}"
                    app:spanCount="2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_apistatus_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:apiStatus="@{viewmodel.apiStatus}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageview_apistatus"
                    android:contentDescription="@string/apistatus_imagedescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textview_apistatus_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="Something went wrong, check your connection and try again!" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>