<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chip_genre"
    style="@style/Widget.MaterialComponents.Chip.Choice"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
