<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movieProp"
            type="com.example.simplemovies.domain.MovieNetwork" />

    </data>

    <ImageView
        android:id="@+id/imageview_grid_movieposter"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="2dp"
        app:poster_path="@{movieProp.poster_path}" />
</layout>